versioned_docs/version-0.13/installation/index.mdx
---
id: installation
title: Installation
sidebar_position: 1
slug: /
---

import { IntegrationList } from "@site/src/components/IntegrationList";

:::caution
The https://infracloudio.github.io/charts Helm repository is deprecated. In the future, Botkube charts from https://infracloudio.github.io/charts can be garbage collected and no longer available.
The new Botkube Helm repository is available under https://charts.botkube.io.
:::

Botkube has two components that need to be installed.

1. Botkube App Integration in your Slack/Mattermost/Microsoft Teams/Discord
2. Botkube backend for the App in your Kubernetes cluster

## Feature map

| Feature                                 | Slack              | Mattermost         | Microsoft Teams    | Discord            | Elastic Search     | Webhook            |
| --------------------------------------- | ------------------ | ------------------ | ------------------ | ------------------ | ------------------ | ------------------ |
| K8s Event push                          | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Kubectl commands                        | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | NA                 | NA                 |
| Multi cluster support                   | :heavy_check_mark: | :heavy_check_mark: | :x:                | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Restrict command execution to a channel | :heavy_check_mark: | :heavy_check_mark: | :x:                | :heavy_check_mark: | NA                 | NA                 |

## Integrations

<IntegrationList
  integrations={[
    { name: "Slack", image: "/images/integrations/slack.svg", link: "installation/slack" },
    { name: "Mattermost", image: "/images/integrations/mattermost.svg", link: "installation/mattermost" },
    { name: "Discord", image: "/images/integrations/discord.svg", link: "installation/discord" },
    { name: "Teams", image: "/images/integrations/msteams.svg", link: "installation/teams" },
    { name: "ElasticSearch", image: "/images/integrations/elasticsearch.svg", link: "installation/elasticsearch" },
    { name: "Webhook", image: "/images/integrations/webhooks.svg", link: "installation/webhook" },
  ]}
/>

:::tip
You can use a single Botkube backend to serve all the interfaces - Slack, Mattermost, Microsoft Teams, ElasticSearch and Webhook. <br/>
You just need to enable required mediums through the settings and add a necessary configuration.<br/>
_see the [configuration](../configuration) section for more information_
:::
